--- a/style.css
+++ b/style.css
@@ -1,63 +1,157 @@
+/* ------ général ------ */
+
 body{
-	margin:0px;
-	background-image: url("Images/Background-body.jpg");
+	background-color: #F0FFF0;
+	margin-top: 50px;
 }
+
 .flex-container {
   display: flex;
   height: 40px;
 }
-.txt{
-	border: solid goldenrod 2px;
-	border-radius: 20%;
-	padding: 2px;
-	color: goldenrod;
-	font-family: sans-serif;
-	-webkit-text-stroke-width: 0.5px;
-	-webkit-text-stroke-color: darkgoldenrod;
-}
-header{
-	background-image: url("Images/Background-header.jpg");
-	/* background-attachment: fixed; */
-	padding: 5px;
-	justify-content: space-between;
-}
-header img {
-	height: 33px;
-	border: solid goldenrod 2px;
-	border-radius: 20%;
-	padding: 2px;
-}
-header nav{
-	width: 60%;
-	justify-content: space-around;
-	align-items: center;
-}
-h2{
-	margin-left: 5px;
-	text-decoration: underline;
-	color: goldenrod;
-	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: darkgoldenrod;
-}
-div{
-	background-image: url("Images/Background-div.jpg");
-	margin: 5%;
-	border-radius: 1%;
-}
-div nav{
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	padding:6.5% 5%;
-	margin: 0% 3%;
-}
-body div img{
-	width: 33.4%;
+
+.recherche{
+	margin: 13px;
 }
 
-p{
-	width: 33.4%;
-	text-align:center;
-	/* background-color: rgba(218,165,32,0.1); */
-	background-color: rgba(0,0,0,0.4);
+.logo {
+	height: 50px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-right: 7px;
+}
+
+.body-content {
+	background-color: #FFFFFF;
+}
+
+.titre{
+	color: goldenrod;
+	text-decoration: underline;
+}
+
+form{
+	margin-bottom: 20px;
+}
+
+/* ------ Article ------ */
+
+.article-presentation {
+	position: -webkit-sticky; /* Safari */
+	position: sticky;
+	top: 50px;
+}
+
+.article-specification {
+	background-color: #FFFFFF;
+	margin-top: 15px;
+}
+
+.article-description {
+	margin: 25px 30px;
+	text-align: center;
+	color: goldenrod;
+	border: solid 2px goldenrod;
+	padding: 5px;
+}
+
+.article-img {
+	border: 2px solid goldenrod;
+}
+
+.article-intitule{
+	text-decoration: underline;
+	color: goldenrod;
+	margin-bottom: 25px;
+	float: left;
+	margin-left: 15px;
+	max-width: 75%;
+}
+
+.article-categorie{
+	color: goldenrod;
+	text-align: center;
+	border: 2px solid goldenrod;
+	padding: 15px;
+	margin-left: 22%;
+	margin-right: 22%;
+}
+
+.article-caracteristiques {
+	margin-left: 5%;
+	margin-right: 5%;
+	width: 90%;
+}
+
+.article-caracteristiques td, .article-caracteristiques th{
+	border: 1px solid silver;
+	text-align: center;
+	padding: 5px;
+}
+
+.article-commentaire{
+	width: 90%;
+	margin-left: 5%;
+	height: 130px;
+	margin-bottom: 20px;
+	resize: none;
+}
+
+.article-panier{
+	width: 30px;
+	float: right;
+	margin-top: 20px;
+	margin-right: 15px;
+}
+
+/* ------ index ------ */
+
+.index-image{
+	width: 200px;
+	border: 2px solid goldenrod;
+	border-radius: 5%;
+}
+
+.index-catalogue{
+	text-align: center;
+	background-image: url("Images/Background-body.jpg");	
+	padding-top: 30px;
+	padding-bottom: 15px;
+	border: 2px solid goldenrod;
+	background-position: -10px;
+	border-radius: 1%;
+	margin: 10px;
+}
+
+.index-categorie{
+	color: goldenrod;
+	/* text-decoration: none; */
+}
+
+/* bandeau de promotion (accueil)*/
+/* Les liens qui sont soulignés en bleu (article)*/
+/* La longueur des liens (article)*/
+/* Le bug sm (article)*/
+
+/* ------ Panier ------ */
+
+.panier-photo-article{
+	width: 196px;
+	padding: 0px;
+	border: 2px solid goldenrod;
+	margin-bottom: 20px;
+	margin-right: 20px;
+}
+
+.panier-detail{
+	margin-bottom: 20px;
+}
+
+.panier-detail th, .panier-detail td{
+	border: 1px solid lightgrey;
+}
+
+.panier-liste{
+	margin-left: 2%;
+	margin-right: 2%:
 }
